--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,38 @@
   <div class="container">
 
     <div class="row">
-    <div class="col-md-3">
+
+
+      <!-- EDIT TRANSACTION -->
+
+      <div class="col-md-3" ng-if="tranToEdit">
+        <h4>Edit Transaction</h4>
+
+
+          <div class="form-group">
+            <input type="date" class="form-control" placeholder="mm/dd/yyyy" ng-model="tranToEdit.date">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Description" ng-model="tranToEdit.desc">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" placeholder="Debit" ng-model="tranToEdit.debit">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" placeholder="Credit" ng-model="tranToEdit.credit">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Memo" ng-model="tranToEdit.memo">
+          </div>
+        <button class="btn btn-danger edit-button" ng-click="cancelEdit()">Cancel</button>
+        <button class="btn btn-info edit-button" ng-click="saveEdit()">Save</button>
+
+      </div>
+
+
+
+
+    <div class="col-md-3" ng-hide="tranToEdit">
       <h4>New Transaction</h4>
       <div class="form-group">
         <input type="date" class="form-control" ng-model="newTrans.date">
@@ -95,37 +126,10 @@
   </div>
 
 
-    <!-- EDIT TRANSACTION -->
-
-    <div ng-if="tranToEdit">
-      <h4>Edit Transaction</h4>
 
 
-        <div class="form-group">
-          <label>Date</label>
-          <input type="date" class="form-control" placeholder="mm/dd/yyyy" ng-model="tranToEdit.date">
-        </div>
-        <div class="form-group">
-          <label>Description</label>
-          <input type="text" class="form-control" placeholder="Description" ng-model="tranToEdit.desc">
-        </div>
-        <div class="form-group">
-          <label>Debit</label>
-          <input type="number" class="form-control" placeholder="Debit" ng-model="tranToEdit.debit">
-        </div>
-        <div class="form-group">
-          <label>Credit</label>
-          <input type="number" class="form-control" placeholder="Credit" ng-model="tranToEdit.credit">
-        </div>
 
-        <div class="form-group">
-          <label>Memo</label>
-          <input type="text" class="form-control" placeholder="Memo" ng-model="tranToEdit.memo">
-        </div>
-      <button class="btn btn-primary" ng-click="cancelEdit()">Cancel</button>
-      <button class="btn btn-primary" ng-click="saveEdit(type)">Save</button>
 
-    </div>
 
 </div><!-- /.row -->
 
