--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 .panel-body {
   text-align: center;
-  background: #b2b2ff;
+  background: #000033;
+  color: white;
 }
 
 .add-button {
@@ -18,7 +19,8 @@ h4 {
   margin-bottom: 20px;
 }
 .add-button{
-  background: #b2b2ff;
+  background: #000033;
+  color: white;
 }
 
 .edit-button{
