--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
   <script src="/js/main.js"></script>
@@ -16,7 +17,7 @@
 <body ng-app='bankingApp' ng-controller='mainCtrl'>
   <div class="panel panel-default">
     <div class="panel-body">
-      <h2>myTransactions</h2>
+      <h2><span class="fa fa-money" aria-hidden="true"></span> myTransactions</h2>
     </div>
   </div>
 
